SUBDIRS = include base build_tools mime sdk src plugins tools templates scripts wxsmith

dist_pkgdata_DATA = tips.txt

EXTRA_DIST = CodeBlocks.cbp \
		CodeBlocks-unix.cbp \
		ContribPlugins.workspace \
		ContribPlugins-unix.workspace \
		CodeBlocks_wx29.cbp \
		CodeBlocks_wx29-unix.cbp \
		CodeBlocks_wx29.workspace \
		CodeBlocks_wx29-unix.workspace \
		CodeBlocks_wx29_64.cbp \
		exchndl.dll \
		mac_pack \
		update \
		update.bat \
		update29 \
		update29.bat \
		update64.bat \
		sdk.doxy
